--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-  
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -37,4 +36,3 @@
   "private": true,
   "homepage": "https://PrashanthiVelpula.github.io/SearchRestaurantApp/"
 }
-
