--- a/package.json
+++ b/package.json
@@ -34,5 +34,5 @@
     "gh-pages": "^6.1.1"
   },
   "private": true,
-  "homepage": "https://PrashanthiVelpula.github.io/SearchRestaurantApp/"
+  "homepage": "https://PrashanthiVelpula.github.io/SearchApp/"
 }
