--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d dist -x .expo > deploy.log 2>&1",
+    // "deploy": "gh-pages -d dist -x .expo > deploy.log 2>&1",
+    "deploy": "gh-pages -d dist -x .expo --verbose",
+
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
