--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    // "deploy": "gh-pages -d dist -x .expo > deploy.log 2>&1",
     "deploy": "gh-pages -d dist -x .expo --verbose",
-
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -22,11 +20,11 @@
     "axios": "^1.6.8",
     "expo": "^51.0.14",
     "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-reanimated": "^3.8.1",
-    "react-native-safe-area-context": "4.8.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.73.6",
+    "react-native-reanimated": "^2.3.0",
+    "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.10",
     "react-scripts": "^5.0.1"
